# nekonote-rpa

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  SECURITY.md  build.sh  claude.sh
.claude/: settings.json  settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
backend/: build.py  pyproject.toml
backend/nekonote/: __init__.py  _runtime.py  ai.py  browser.py  cli.py  config.py  db.py  desktop.py  dialog.py  errors.py  excel.py  file.py  gsheets.py  history.py  http.py  log.py  mail.py  main.py  mcp_server.py  ocr.py  pdf.py  recorder.py  retry.py  scheduler.py  stdio_server.py  teams.py  text.py  window.py
backend/nekonote/api/: routes.py  websocket.py
backend/nekonote/engine/: context.py  executor.py  picker.py
backend/nekonote/engine/nodes/: browser.py  control.py  data.py  desktop.py  registry.py
backend/nekonote/models/: flow.py
backend/tests/: conftest.py  test_ai.py  test_browser.py  test_browser_iframe.py  test_cli.py  test_cloud.py  test_config.py  test_db.py  test_debug.py  test_desktop.py  test_desktop_ext.py  test_dialog.py  test_errors.py  test_excel.py  test_file.py  test_history.py  test_http.py  test_log.py  test_mail.py  test_mcp_flow.py  test_mcp_server.py  test_ocr.py  test_pdf.py  test_recorder.py  test_retry.py  test_runtime.py  test_scheduler.py  test_subflow.py  test_text.py  test_window.py
frontend/: electron-builder.json  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  tsconfig.web.json  vite.config.test.ts
frontend/e2e/: flow-editor.spec.ts
frontend/src/main/: backendManager.ts  index.ts  ipc.ts  terminal.ts  updater.ts
frontend/src/preload/: index.ts
frontend/src/renderer/: App.tsx  index.html
frontend/src/renderer/api/: client.ts  ws.ts
frontend/src/renderer/codegen/: generatePython.ts
frontend/src/renderer/components/BlockEditor/: Block.tsx  BlockEditor.tsx  BlockList.tsx
frontend/src/renderer/components/CodeEditor/: CodePanel.tsx
frontend/src/renderer/components/ExecutionPanel/: ExecutionPanel.tsx
frontend/src/renderer/components/FlowEditor/: CustomNode.tsx  FlowCanvas.tsx  NodePalette.tsx
frontend/src/renderer/components/PropertiesPanel/: PropertiesPanel.tsx
frontend/src/renderer/i18n/: index.ts  ja.json
frontend/src/renderer/stores/: executionStore.ts  flowStore.ts
frontend/src/renderer/types/: api.ts  flow.ts  nodeDefinitions.ts
(+2 files in other folders)
