[project]
name = "nekonote"
version = "0.1.0"
description = "nekonote - Python RPA toolkit"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "websockets>=16.0",
]

[project.scripts]
nekonote = "nekonote.cli:main"

[project.optional-dependencies]
automation = [
    "playwright>=1.40.0",
    "pyautogui>=0.9.54",
    "pywinauto>=0.6.8",
    "pillow>=10.0.0",
]
uitree = [
    "uitree @ git+https://github.com/nananek/uitree.git",
    "uiautomation>=2.0.0",
    "lxml>=4.9.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
