[project]
name = "nekonote"
version = "0.1.0"
description = "nekonote - Python RPA toolkit"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.44.0",
    "pydantic>=2.13.0",
    "websockets>=16.0",
]

[project.scripts]
nekonote = "nekonote.cli:main"

[project.optional-dependencies]
automation = [
    "playwright>=1.58.0",
    "pyautogui>=0.9.54",
    "pywinauto>=0.6.9",
    "pillow>=12.2.0",
]
uitree = [
    "uitree @ git+https://github.com/nananek/uitree.git",
    "uiautomation>=2.0.29",
    "lxml>=6.0.4",
]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"
