[project]
name = "nekonote"
version = "0.1.0"
description = "nekonote - Python RPA toolkit"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.44.0",
    "pydantic>=2.13.0",
    "websockets>=16.0",
]

[project.scripts]
nekonote = "nekonote.cli:main"

[project.optional-dependencies]
automation = [
    "playwright>=1.58.0",
    "pyautogui>=0.9.54",
    "pywinauto>=0.6.9",
    "pillow>=12.2.0",
]
data = [
    "openpyxl>=3.1.0",
    "pdfplumber>=0.10.0",
]
mcp = [
    "mcp>=1.0.0",
]
uitree = [
    "uitree @ git+https://github.com/nananek/uitree.git",
    "uiautomation>=2.0.29",
    "lxml>=6.0.4",
]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that need real browser/desktop (deselect with -m 'not integration')",
]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"
